# eden-sdk-py

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/eden_sdk/: EdenClient.py  __init__.py  methods.py
tests/: test_edenclient.py
